feat: completion of obligatory conditions